--- a/css/main.css
+++ b/css/main.css
@@ -383,6 +383,102 @@ html {
           animation-play-state: paused;
 }
 
+header {
+  position: absolute;
+  padding: 0 80px;
+  width: 1200px;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  z-index: 1000;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(30%, rgba(255, 255, 255, 0)), to(rgba(0, 0, 0, 0.1)));
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0) 30%, rgba(0, 0, 0, 0.1) 100%);
+}
+
+.header__logo {
+  -webkit-transition: scale 200ms ease;
+  transition: scale 200ms ease;
+}
+.header__logo:hover {
+  scale: 1.1;
+}
+
+nav {
+  -ms-flex-line-pack: end;
+      align-content: end;
+}
+
+.header__thumb {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav---btn {
+  background-color: transparent;
+}
+
+.header__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 40px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style: none;
+}
+.header__nav a {
+  display: block;
+  padding: 10px 0;
+  text-decoration: none;
+  background-color: transparent;
+  color: #6b86a4;
+  font-size: larger;
+  font-weight: 600;
+  -webkit-transition: scale 100ms ease, text-shadow 100ms ease-in;
+  transition: scale 100ms ease, text-shadow 100ms ease-in;
+}
+.header__nav a:after {
+  content: "";
+  display: block;
+  margin-top: 5px;
+  width: 100%;
+  border-bottom: 2px solid rgba(42, 42, 42, 0.8);
+  -webkit-transition: -webkit-transform 300ms ease;
+  transition: -webkit-transform 300ms ease;
+  transition: transform 300ms ease;
+  transition: transform 300ms ease, -webkit-transform 300ms ease;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+}
+.header__nav a:hover {
+  color: rgba(42, 42, 42, 0.8);
+  stroke: 2px black;
+  text-shadow: 2px 6px 6px #C2C2C2;
+  scale: 1.1;
+}
+.header__nav a:hover:after {
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+}
+
 .hero {
   background-image: url(../images/2b1966ee8e9994d4051d1154196acc0e.jpeg);
   background-size: cover;
@@ -853,4 +949,118 @@ footer > p::before {
   position: absolute;
   top: 50%;
   left: 30%;
+}
+
+.form {
+  width: 700px;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, rgba(255, 255, 255, 0)), to(rgba(0, 0, 0, 0.9))), url(https://fastly.picsum.photos/id/14/2500/1667.jpg?hmac=ssQyTcZRRumHXVbQAVlXTx-MGBxm6NHWD3SryQ48G-o);
+  background: linear-gradient(rgba(255, 255, 255, 0) 50%, rgba(0, 0, 0, 0.9) 100%), url(https://fastly.picsum.photos/id/14/2500/1667.jpg?hmac=ssQyTcZRRumHXVbQAVlXTx-MGBxm6NHWD3SryQ48G-o);
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 10px;
+  outline: 10px solid, rgb(114, 137, 151);
+  padding: 60px 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.form > img {
+  margin-bottom: 40px;
+}
+
+.form-thumb {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+  margin-left: auto;
+}
+
+.labels {
+  display: inline-block;
+  font-size: 18px;
+  font-weight: 600;
+  width: 77px;
+  margin-bottom: 20px;
+  position: relative;
+  top: 56px;
+  left: 225px;
+  color: black;
+  text-align: end;
+}
+
+.form-field {
+  display: inline-block;
+  color: rgb(227, 225, 225);
+  font-size: larger;
+  font-weight: 600;
+  letter-spacing: 0.12rem;
+  padding: 15px 25px;
+  border-radius: 8px;
+  width: 100%;
+  outline: none;
+  border: none;
+  background: -webkit-gradient(linear, left top, right top, color-stop(60%, rgba(255, 255, 255, 0.2)), to(rgba(164, 164, 164, 0.9)));
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.2) 60%, rgba(164, 164, 164, 0.9) 100%);
+  -webkit-box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+          box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+.form-field:hover .labels {
+  -webkit-transform: trancelateX(20px);
+          transform: trancelateX(20px);
+}
+
+.checkbox {
+  position: relative;
+  top: 10px;
+}
+
+.chk-lbl {
+  position: relative;
+  left: 40px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: rgb(224, 223, 223);
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 25px;
+}
+
+.chkbx {
+  position: absolute;
+  top: 6px;
+  left: 10px;
+  display: inline-block;
+}
+
+.form-button {
+  top: 15px;
+  width: 100px;
+  -ms-flex-item-align: center;
+      align-self: center;
+  background-color: transparent;
+}
+.form-button:disabled {
+  border-color: rgb(78, 78, 78);
+  color: rgb(83, 82, 82);
+}
+.form-button:enabled {
+  border-color: rgb(114, 137, 151);
+  color: rgb(114, 137, 151);
+}
+.form-button:enabled:hover {
+  border-color: rgb(61, 147, 126);
+  color: rgb(61, 147, 126);
 }/*# sourceMappingURL=main.css.map */
