--- a/main.scss
+++ b/main.scss
@@ -10,10 +10,11 @@
 @import "./sass/utilities/base";
 @import "./sass/components/buttons";
 
-
+@import "./sass/components/header";
 @import "./sass/components/hero";
 @import "./sass/components/about";
 @import "./sass/components/gallery";
 @import "./sass/components/whereToGo";
 @import "./sass/components/invitation";
 @import "./sass/components/footer";
+@import "./sass/components/form";
