--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -67,6 +67,7 @@
 	font-size: 18px;
 	font-weight: 600;
 	margin-bottom: 25px;
+	transition: color 400ms linear;
 }
 
 .checkmark {
@@ -77,7 +78,8 @@
 	border-radius: 3px;
 	position: relative;
 	right: 205px;
-	transition: transform 300ms linear, 200ms border-color 100ms linear, 1000ms border-radius 200ms linear, 200ms width 100ms linear, 200ms border-width 100ms linear;
+	transition: transform 300ms linear, 200ms border-color 100ms linear, 1000ms border-radius 200ms linear,
+		200ms width 100ms linear, 200ms border-width 100ms linear;
 	cursor: pointer;
 }
 
@@ -91,18 +93,16 @@
 }
 
 .chkbx:checked ~ .checkmark {
-
-
 	width: 14px;
 	border-width: 3px;
 	transform: rotateZ(45deg) scale(1.3);
 	border-color: rgb(62, 187, 9);
-	border-top-color:  rgba(227, 225, 225,0);
-	border-left-color:  rgba(227, 225, 225,0);
-
-	
+	border-top-color: rgba(227, 225, 225, 0);
+	border-left-color: rgba(227, 225, 225, 0);
 }
-
+.chkbx:checked ~ .chk-lbl  {
+	color: rgb(210, 231, 219);
+}
 
 .form-button {
 	top: 15px;
@@ -128,5 +128,13 @@
 }
 .fancybox__content {
 	background-color: transparent !important;
+	transition:  padding 1200ms linear 300ms;
 }
 
+.fancybox__slide.has-iframe.has-close-btn.is-selected.is-done > .fancybox__content {
+	padding: 0;
+
+}
+.fancybox__iframe {
+	clip-path: inset(0 0 0 0 round 2%);
+}
