--- a/css/main.css
+++ b/css/main.css
@@ -360,6 +360,42 @@ body::-webkit-scrollbar {
           transform: scale(1.2);
 }
 
+.return-to-top {
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.7);
+  width: 50px;
+  height: 50px;
+  display: block;
+  text-decoration: none;
+  border-radius: 35px;
+  display: none;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.return-to-top i {
+  color: #fff;
+  margin: 0;
+  position: relative;
+  left: 16px;
+  top: 13px;
+  font-size: 19px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.return-to-top:hover {
+  background: rgba(0, 0, 0, 0.9);
+}
+
+.return-to-top:hover i {
+  color: #fff;
+  top: 5px;
+}
+
 .button {
   color: #2a2a2a;
   text-decoration: none;
